finish migrating to locations
